# CameraAndLensDatabase

./: .gitignore  .mypy.ini  Lenses.csv  README.md  cameras.csv  lenses.csv  pyproject.toml  sort.py  tasks.py  test.sh
.github/workflows/: test.yml
camera_lens_database/: __init__.py  __main__.py  cache.py  cameras.py  exceptions.py  fetch.py  lenses.py  models.py  nikon.py  nikon_z.py  spec.py  utils.py
camera_lens_database/cli/: __init__.py  cache.py  fetch.py
cldb/: __init__.py  models.py  nikon.py  sony.py  utils.py
cldb/cli/: __init__.py  cache.py  fetch.py
tests/: test_utils.py
tools/: lint.py
