[tool.poetry]
name = "camera_lens_database"
version = "21.5.5"
description = ""
authors = ["Suguru Yamamoto <sgryjp@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
camera-lens-database = "camera_lens_database.__main__:app"

[tool.poetry.dependencies]
python = "^3.7.9"
beautifulsoup4 = "^4.9.3"
click = "^7.1.2"
colorama = "^0.4.4"
lxml = "^4.6.3"
pandas = "^1.2.4"
pydantic = "^1.8.1"
requests = "^2.25.1"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"
mypy = "^0.812"
pip = "^21.1.1"
wheel = "^0.36.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
