[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cldb"
version = "21.5.16"
description = ""
authors = [{ name = "Suguru Yamamoto", email = "sgryjp@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "beautifulsoup4",
    "click",
    "joblib",
    "lxml",
    "pandas",
    "pydantic",
    "requests",
    "tqdm",
]

[project.scripts]
cldb = "cldb.cli:main"

[project.optional-dependencies]
dev = ["flake8-black", "flake8-isort", "mypy", "pip", "pytest-cov", "wheel"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
