[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cldb"
version = "21.5.16"
description = ""
authors = [{ name = "Suguru Yamamoto", email = "sgryjp@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "beautifulsoup4",
    "click",
    "joblib",
    "lxml",
    "pandas",
    "pydantic",
    "requests",
    "tqdm",
]

[project.scripts]
cldb = "cldb.cli:main"

[project.optional-dependencies]
dev = [
    "flake8-black",
    "flake8-isort",
    "invoke",
    "mypy",
    "pip",
    "pytest-cov",
    "wheel",
]

[tool.isort]
profile = "black"
